VulkanCompute/radiance_cascades_2d/error.log
install
+- install ZigVulkanCompute_RadianceCascades
   +- compile exe ZigVulkanCompute_RadianceCascades Debug native 1 errors
main.zig:748:35: error: expected type expression, found '{'
        while (i >= 0) : (i -= 1) {
                                  ^
error: the following command failed with 1 compilation errors:
"C:\\Users\\nguye\\scoop\\apps\\zig\\0.15.2\\zig.exe" build-exe -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\imgui.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\imgui_demo.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\imgui_draw.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\imgui_tables.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\imgui_widgets.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\dcimgui.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\backends\\imgui_impl_vulkan.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\backends\\dcimgui_impl_vulkan.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\backends\\imgui_impl_win32.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\backends\\dcimgui_impl_win32.cpp" -lvulkan-1 -lgdi32 -luser32 -ldwmapi -ODebug -I "C:\\VulkanSDK\\1.4.335.0\\Include" -I "G:\\Projects\\SandboxDev\\VulkanCompute\\radiance_cascades_2d\\..\\cimgui\\dcimgui" -I "G:\\Projects\\SandboxDev\\VulkanCompute\\radiance_cascades_2d\\..\\cimgui\\dcimgui\\backends" -I "G:\\Projects\\SandboxDev\\VulkanCompute\\radiance_cascades_2d\\..\\cimgui\\dcimgui" -I "G:\\Projects\\SandboxDev\\VulkanCompute\\radiance_cascades_2d\\..\\cimgui\\dcimgui\\backends" -L "C:\\VulkanSDK\\1.4.335.0\\Lib" --dep vulkan_window --dep vulkan_compute --dep imgui_backend "-Mroot=G:\\Projects\\SandboxDev\\VulkanCompute\\radiance_cascades_2d\\main.zig" -ODebug -I "C:\\VulkanSDK\\1.4.335.0\\Include" "-Mvulkan_window=G:\\Projects\\SandboxDev\\VulkanCompute\\vulkan\\vulkan_window.zig" -ODebug -I "C:\\VulkanSDK\\1.4.335.0\\Include" "-Mvulkan_compute=G:\\Projects\\SandboxDev\\VulkanCompute\\vulkan\\vulkan_compute.zig" -ODebug -I "G:\\Projects\\SandboxDev\\VulkanCompute\\radiance_cascades_2d\\..\\cimgui\\dcimgui" -I "G:\\Projects\\SandboxDev\\VulkanCompute\\radiance_cascades_2d\\..\\cimgui\\dcimgui\\backends" -I "C:\\VulkanSDK\\1.4.335.0\\Include" --dep vulkan_window "-Mimgui_backend=G:\\Projects\\SandboxDev\\VulkanCompute\\radiance_cascades_2d\\imgui_backend.zig" -lc++ -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\nguye\\AppData\\Local\\zig" --name ZigVulkanCompute_RadianceCascades --zig-lib-dir "C:\\Users\\nguye\\scoop\\apps\\zig\\0.15.2\\lib\\" --listen=-

Build Summary: 0/3 steps succeeded; 1 failed
install transitive failure
+- install ZigVulkanCompute_RadianceCascades transitive failure
   +- compile exe ZigVulkanCompute_RadianceCascades Debug native 1 errors

error: the following build command failed with exit code 1:
.zig-cache\o\d8c4323986ece2181bc513fd290568e4\build.exe C:\Users\nguye\scoop\apps\zig\0.15.2\zig.exe C:\Users\nguye\scoop\apps\zig\0.15.2\lib G:\Projects\SandboxDev\VulkanCompute\radiance_cascades_2d .zig-cache C:\Users\nguye\AppData\Local\zig --seed 0x5d8a729a -Z3bdb86c507e091b2
